# data-application-gov-hub

./: .gitignore  .gitlab-ci.yml  .sqlfluff.ci  .sqlfluffignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.superset  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup-git-hooks.sh
.github/: CONTRIBUTING.md  MERGE_REQUEST_PROTOCOL.md  PULL_REQUEST_TEMPLATE.md
.github/TEMPLATES/: COMMIT_TEMPLATE.md
.github/actions/setup-poetry/: action.yml
.github/workflow/: main.yaml
.github/workflows/: main.yaml
airflow/plugins/: cliente_base.py  cliente_contratos.py  cliente_estrutura.py  cliente_siafi.py
airflow_lappis/: airflow.cfg
airflow_lappis/configs/: orgaos.yaml
airflow_lappis/dags/dashboards/: __init__.py  dashboard_servidores_dag.py
airflow_lappis/dags/data_ingest/: cargos_funcao_ingest_dag.py  contratos_inativos_ingest_dag.py  contratos_ingest_dag.py  cronograma_ingest_dag.py  dados_afastamento_historico_siape_ingest_dag.py  dados_afastamento_siape_ingest_dag.py  dados_dependentes_siape_ingest_dag.py  dados_escolares_siape_ingest_dag.py  dados_financeiros_siape_dag.py  dados_funcionais_siape_ingest_dag.py  dados_pa_siape_ingest_dag.py  dados_pessoais_siape_ingest_dag.py  dados_uorg_siape_ingest_dag.py  dag_debug_siape_dag.py  drop_tables_dag.py  empenhos_ingest_dag.py  empenhos_tesouro_ingest_dag.py  estagios_tesouro_ingest_dag.py  estrutura_organizacional_cargos_ingest_dag.py  faturas_ingest_dag.py  lista_aposentadoria_parcial_siape_ingest_dag.py  lista_aposentadoria_siape_ingest_dag.py  lista_servidores_siape_ingest_dag.py  lista_uorgs_siape_ingest_dag.py  nc_tesouro_ingest.dag.py  nota_credito_siafi_ingest_dag.py  nota_empenho_siafi_ingest_dag.py  notas_de_credito_ingest_dag.py  pf_tesouro_ingest_dag.py  plano_acao_ingest_dag.py  programa_beneficiario_ingest_dag.py  programacao_financeira_ingest_dag.py  programas_ingest_dag.py  terceirizados_ingest_dag.py  unidade_organizacional_ingest_dag.py
airflow_lappis/dags/data_ingest/compras_gov/: contratos_inativos_ingest_dag.py  contratos_ingest_dag.py  cronograma_ingest_dag.py  empenhos_ingest_dag.py  faturas_ingest_dag.py  terceirizados_ingest_dag.py
airflow_lappis/dags/data_ingest/dados_abertos/: deputados_ingest_dag.py  periodo_legislatura_ingest_dag.py  senadores_ingest_dag.py
airflow_lappis/dags/data_ingest/ipea_pro/: ipea_pro_to_postgres_ingest_dag.py
airflow_lappis/dags/data_ingest/pncp/: itens_resultados_licitacoes.py  licitacoes_ingest.py
airflow_lappis/dags/data_ingest/sgac/: projetos_sgac_ingest_dag.py
airflow_lappis/dags/data_ingest/siafi/: nota_credito_siafi_ingest_dag.py  nota_empenho_siafi_ingest_dag.py  programacao_financeira_siafi_ingest_dag.py
airflow_lappis/dags/data_ingest/siape/: dados_afastamento_historico_siape_ingest_dag.py  dados_afastamento_siape_ingest_dag.py  dados_curriculo_siape_ingest_dag.py  dados_dependentes_siape_ingest_dag.py  dados_escolares_siape_ingest_dag.py  dados_financeiros_siape_dag.py  dados_pa_siape_ingest_dag.py  dados_pessoais_siape_ingest_dag.py  dados_uorg_siape_ingest_dag.py  lista_aposentadoria_siape_ingest_dag.py  lista_servidores_siape_ingest_dag.py  lista_uorgs_siape_ingest_dag.py  pensoes_instituidas_siape_ingest_dag.py
airflow_lappis/dags/data_ingest/siconv/: sincov_ingest_dag.py
airflow_lappis/dags/data_ingest/siorg/: cargos_funcao_ingest_dag.py  estrutura_organizacional_cargos_ingest_dag.py  unidade_organizacional_ingest_dag.py
airflow_lappis/dags/data_ingest/sisbolsas/: sisbolsas_to_postgres_ingest_dag.py
airflow_lappis/dags/data_ingest/tesouro_gerencial/: empenhos_tesouro_ingest_dag.py  estagios_tesouro_ingest_dag.py  nc_tesouro_ingest.dag.py  pf_tesouro_ingest_dag.py  visao_orcamentaria_ingest.py
airflow_lappis/dags/data_ingest/tesouro_gerencial/mcid/: dotacao_execucao_outras_fontes_mcid_ingest_dag.py
airflow_lappis/dags/data_ingest/transfere_gov/: notas_de_credito_ingest_dag.py  plano_acao_ingest_dag.py  programa_beneficiario_ingest_dag.py  programacao_financeira_ingest_dag.py  programas_ingest_dag.py
airflow_lappis/dags/data_ingest/transfere_gov_emendas/: planos_acao_especiais_ingest_dag.py  programas_especiais_ingest_dag.py
airflow_lappis/dags/data_ingest/transferegov_emendas/: documentos_habeis_especias_ingest_dag.py  empenhos_especiais_ingest_dag.py  executor_especial_ingest_dag.py  finalidade_especial_ingest_dag.py  historico_pagamentos_especiais_ingest_dag.py  metas_especiais_ingest_dag.py  ordem_bancaria_especial_ingest_dag.py  plano_trabalho_especial_ingest_dag.py  planos_acao_especiais_ingest_dag.py  programas_especiais_ingest_dag.py  relatorio_gestao_novo_especial_ingest_dag.py  reltorio_gestao_ingest.py
airflow_lappis/dags/dbt/: .user.yml
airflow_lappis/dags/dbt/ipea/: cosmos_dag.py  dbt_project.yml  profiles.yml
airflow_lappis/dags/dbt/mir/: .user.yml  cosmos_dag.py  dbt_project.yml  profiles.yml
airflow_lappis/helpers/: dados_funcionais_handler.py  postgres_helpers.py  safe_request.py
airflow_lappis/plugins/: cliente_base.py  cliente_contratos.py  cliente_deputados.py  cliente_email.py  cliente_estrutura.py  cliente_github.py  cliente_pncp.py  cliente_postgres.py  cliente_senadores.py  cliente_siafi.py  cliente_siape.py  cliente_siconv.py  cliente_siorg.py  cliente_sqlserver.py  cliente_ted.py  cliente_transferegov_emendas.py  tabelas_siconv.py
airflow_lappis/templates/siape/: consultaDadosAfastamento.xml.j2  consultaDadosAfastamentoHistorico.xml.j2  consultaDadosCurriculo.xml.j2  consultaDadosDependentes.xml.j2  consultaDadosEscolares.xml.j2  consultaDadosFinanceiros.xml.j2  consultaDadosPA.xml.j2  consultaDadosPessoais.xml.j2  consultaDadosUorg.xml.j2  listaInformacoesAposentadoria.xml.j2  listaInformacoesAposentadoriaParcial.xml.j2  listaServidores.xml.j2  listaUorgs.xml.j2
jupyter/: test_apis.ipynb
(+231 files in other folders)
